# iroh-smol-kv

./: .gitignore  Cargo.toml  README.md
examples/: cli.rs  test.rs
iroh-smol-kv-uniffi/: Cargo.toml  README.md  build.rs
iroh-smol-kv-uniffi/src/: code.rs  lib.rs
iroh-smol-kv-uniffi/src/code/: client.rs  filter.rs  key_bound.rs  public_key.rs  signed_value.rs  subscribe_item.rs  subscribe_mode.rs  time_bound.rs
iroh-streamplace/: Cargo.toml  Makefile  README.md
iroh-streamplace/go/: go.mod  main.go
iroh-streamplace/src/: db.rs  lib.rs  streams.rs  tests.rs
iroh-streamplace/src/db/kv/: subscribe_mode.rs
iroh-streamplace/src/kv/: public_key.rs
src/: lib.rs  main.rs
uniffi-example/: Cargo.toml  Makefile
uniffi-example/go/: main.go
uniffi-example/src/: lib.rs
