[package]
name = "iroh-smol-kv"
version = "0.1.0"
edition = "2024"
description = "A tiny replicated kv store that sync over an iroh-gossip topic"
license = "MIT OR Apache-2.0"
authors = ["rklaehn <rklaehn@protonmail.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-smol-kv"
keywords = ["gossip", "kv", "p2p", "iroh"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["signature"] }
hex = "0.4.3"
iroh = "0.92"
iroh-gossip = "0.92"
irpc = "0.8.0"
n0-future = "0.2.0"
postcard = "1.1.3"
rand = "0.8.5"
rpds = { version = "1.1.1", features = ["serde"] }
serde = "1.0.225"
serde-big-array = "0.5.1"
snafu = "0.8.9"
tokio = "1.47.1"
tracing = "0.1.41"

chrono = { version = "0.4.42", optional = true }
peg = { version = "0.8.5", optional = true }

[features]
filter-parser = ["dep:chrono", "dep:peg"]
default = ["filter-parser"]

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
iroh-base = "0.92"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
n0-snafu = "0.2.1"

[workspace]
members = ["uniffi-example", "iroh-smol-kv-uniffi"]
