[package]
name = "iroh-smol-kv"
version = "0.3.1"
edition = "2024"
description = "A tiny replicated kv store that sync over an iroh-gossip topic"
license = "MIT OR Apache-2.0"
authors = ["rklaehn <rklaehn@protonmail.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-smol-kv"
keywords = ["gossip", "kv", "p2p", "iroh"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = { version = "1.10.1", features = ["serde"] }
ed25519-dalek = { version = "3.0.0-pre.1", features = ["signature"] }
hex = "0.4.3"
iroh = { workspace = true }
iroh-gossip = { workspace = true }
irpc = { workspace = true }
n0-future = { workspace = true }
postcard = "1.1.3"
rand = "0.9"
rpds = { version = "1.1.1", features = ["serde"] }
serde = "1.0.225"
serde-big-array = "0.5.1"
tokio = "1.47.1"
tracing = "0.1.41"
sync_wrapper = "1"

chrono = { version = "0.4.42", optional = true }
peg = { version = "0.8.5", optional = true }
n0-error = { workspace = true }

[features]
filter-parser = ["dep:chrono", "dep:peg"]
default = ["filter-parser"]

[dev-dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
iroh-tickets = { workspace = true }
iroh = { workspace = true  }
tokio = { version = "1.47.1", features = ["signal"] }

[workspace]
members = ["uniffi-example", "iroh-smol-kv-uniffi"]

[workspace.dependencies]
iroh = { version = "0.98.0", default-features = false }
iroh-gossip = "0.98.0"
iroh-tickets = "0.5.0"
irpc = { version = "0.14.0", default-features = false, features = ["derive", "rpc"] }
n0-future = "0.3.2"
n0-error = "0.1.3"
