[package]
name = "iroh-smol-kv-uniffi"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["rklaehn <rklaehn@protonmail.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-smol-kv"
keywords = ["gossip", "kv", "p2p", "iroh"]
description = "Uniffi support for iroh-smol-kv"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = "1"
iroh = "0.93"
iroh-gossip = "0.93"
irpc = "0.8.0"
n0-future = "0.2.0"
snafu = "0.8.9"
tokio = "1.47.1"
uniffi = "0.28.3"
iroh-smol-kv = { version = "0.3.0", path = ".." }
