[package]
name = "uniffi-example"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh-smol-kv-uniffi = { version = "0.1", path = "../iroh-smol-kv-uniffi" }
bytes = "1"
iroh = "0.92"
iroh-gossip = "0.92"
irpc = "0.8"
n0-future = "0.2"
snafu = "0.8"
tokio = "1.47"
uniffi = "0.28"
iroh-smol-kv = { version = "0.1", path = ".." }
sync_wrapper = "1"
rand = "0.8.5"
iroh-base = "0.92"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.cargo-udeps.ignore]
normal = ["iroh-smol-kv"]
