[package]
name = "uniffi-example"
version = "0.4.0"
edition = "2024"

[dependencies]
iroh-smol-kv-uniffi = { version = "0.4.0", path = "../iroh-smol-kv-uniffi" }
bytes = "1"
iroh = { workspace = true }
iroh-gossip = { workspace = true }
irpc = { workspace = true }
n0-future = { workspace = true }
snafu = "0.8"
tokio = "1.47"
uniffi = "0.28"
iroh-smol-kv = { version = "0.4.0", path = ".." }
iroh-tickets = { workspace = true }
rand = "0.9"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.cargo-udeps.ignore]
normal = ["iroh-smol-kv"]
